all guise_gen turns to pseudoprincipal_gen
