# applications/websubmit-rs/cryptdb-server/src/disguises/universal_anon_disguise.rs
@@ -1,7 +1,7 @@
 use crate::backend::MySqlBackend;
 use edna_cryptdb::*;
 
-const GUISEGEN_JSON: &'static str = include_str!("./guise_gen.json");
+const PPGEN_JSON: &'static str = include_str!("./pp_gen.json");
 const TABLEINFO_JSON: &'static str = include_str!("./table_info.json");
 const ANON_JSON: &'static str = include_str!("./universal_anon_disguise.json");
 
@@ -10,7 +10,7 @@ pub fn apply(bg: &mut MySqlBackend) -> Result<DID, mysql::Error> {
         "NULL".to_string(),
         ANON_JSON,
         TABLEINFO_JSON,
-        GUISEGEN_JSON,
+        PPGEN_JSON,
         None,
         None,
         false,
