# applications/websubmit-rs/edna-server/src/disguises/universal_anon_disguise_edna.rs
@@ -8,7 +8,7 @@ use sql_parser::ast::Expr;
 use std::collections::HashMap;
 use std::time;
 
-const GUISEGEN_JSON: &'static str = include_str!("./guise_gen.json");
+const PPGEN_JSON: &'static str = include_str!("./pp_gen.json");
 const TABLEINFO_JSON: &'static str = include_str!("./table_info.json");
 const ANON_JSON: &'static str = include_str!("./universal_anon_disguise.json");
 
@@ -20,7 +20,7 @@ pub fn apply(
         "NULL".to_string(),
         ANON_JSON,
         TABLEINFO_JSON,
-        GUISEGEN_JSON,
+        PPGEN_JSON,
         None,
         None,
         false,
